@@ -1,3 +1,9 @@
+2009-08-06  Uros Bizjak  <ubizjak@gmail.com>
+	    H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/40957
+	* gcc.target/i386/pr40957: New test.
+
 2009-08-06  Richard Guenther  <rguenther@suse.de>
 
 	PR tree-optimization/40964
