@@ -1,3 +1,14 @@
+2009-08-06  Uros Bizjak  <ubizjak@gmail.com>
+	    H.J. Lu  <hongjiu.lu@intel.com>
+
+	PR target/40957
+	* config/i386/i386.c (standard_sse_mode_p): Remove.
+	(standard_sse_constant_p): Return 2 for integer mode
+	vector_all_ones_operand when SSE2 is enabled.
+	(standard_sse_constant_opcode)<case 2>: Always return [v]pcmpeqd.
+	(ix86_expand_vector_move): Do not check for negative values from
+	standard_sse_constant_p.
+
 2009-08-06  Richard Guenther  <rguenther@suse.de>
 
 	* tree-ssa.c (useless_type_conversion_p_1): Make function and
